# Muse-Source

./: .gitignore  .gitmodules  .travis.yml  BUILD_OSX.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  docker-compose-vlan.yml  docker-compose.yml  sonar-project.properties
Docker/: Dockerfile  config.ini  entrypoint.sh  genesis-test.json
doc/: api-notes.md  debug_node_plugin.md  plugin-custom-tags.md  plugin.md
example_plugins/hello_api/: CMakeLists.txt  hello_api_plugin.cpp
external_plugins/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
libraries/app/include/muse/app/: api.hpp  api_access.hpp  api_context.hpp  application.hpp  database_api.hpp  impacted.hpp  plugin.hpp  state.hpp
libraries/chain/: CMakeLists.txt  asset_evaluator.cpp  asset_object.cpp  base_evaluator.cpp  base_objects.cpp  block_database.cpp  database.cpp  evaluator.cpp  fork_database.cpp  get_config.cpp  index.cpp  muse_evaluator.cpp  muse_objects.cpp  proposal_evaluator.cpp  proposal_object.cpp  transaction_object.cpp
libraries/chain/hardfork.d/: 0-1.hf  0-2.hf  0-3.hf  0-4.hf  0-preamble.hf
libraries/chain/include/muse/chain/: account_object.hpp  asset_object.hpp  balance_object.hpp  base_evaluator.hpp  base_objects.hpp  block_database.hpp  block_summary_object.hpp  compound.hpp  config.hpp  content_object.hpp  custom_evaluator.hpp  database.hpp  db_with.hpp  evaluator.hpp  exceptions.hpp  fork_database.hpp  genesis_state.hpp  get_config.hpp  global_property_object.hpp  history_object.hpp  immutable_chain_parameters.hpp  internal_exceptions.hpp  node_property_object.hpp  proposal_object.hpp  streaming_platform_objects.hpp  transaction_evaluation_state.hpp  transaction_object.hpp  witness_objects.hpp
libraries/chain/include/muse/chain/protocol/: address.hpp  asset.hpp  asset_ops.hpp  authority.hpp  base.hpp  base_operations.hpp  block.hpp  block_header.hpp  muse_operations.hpp  operations.hpp  proposal.hpp  protocol.hpp  pts_address.hpp  sign_state.hpp  transaction.hpp  types.hpp  version.hpp
libraries/chain/protocol/: address.cpp  asset.cpp  asset_ops.cpp  authority.cpp  base_operations.cpp  block.cpp  muse_operations.cpp  operations.cpp  proposal.cpp  pts_address.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp
libraries/db/: object_database.cpp  undo_database.cpp
libraries/db/include/graphene/db/: index.hpp  object.hpp  object_database.hpp  object_id.hpp  undo_database.hpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp  egenesis_full.cpp  egenesis_full.cpp.tmpl  embed_genesis.cpp
libraries/egenesis/include/muse/egenesis/: egenesis.hpp
libraries/manifest/: CMakeLists.txt  mf_plugins.cpp
libraries/manifest/inc/: mf_external_plugins.inc  mf_internal_plugins.inc
libraries/manifest/include/muse/manifest/: plugins.hpp
libraries/net/: node.cpp  peer_connection.cpp  stcp_socket.cpp
libraries/net/include/graphene/net/: config.hpp  core_messages.hpp  node.hpp  stcp_socket.hpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/account_history/include/muse/account_history/: account_history_plugin.hpp
libraries/plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp
libraries/plugins/auth_util/include/muse/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp
libraries/plugins/block_info/include/muse/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/plugins/custom_tags/: CMakeLists.txt  custom_tags.cpp  custom_tags_api.cpp
libraries/plugins/custom_tags/include/muse/custom_tags/: custom_tags.hpp  custom_tags_api.hpp
libraries/plugins/debug_node/: CMakeLists.txt  debug_node_api.cpp  debug_node_plugin.cpp
libraries/plugins/debug_node/include/muse/plugins/debug_node/: debug_node_api.hpp  debug_node_plugin.hpp
libraries/plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp
libraries/plugins/delayed_node/include/muse/delayed_node/: delayed_node_plugin.hpp
libraries/plugins/market_history/: CMakeLists.txt  market_history_api.cpp  market_history_plugin.cpp
libraries/plugins/market_history/include/muse/market_history/: market_history_api.hpp  market_history_plugin.hpp
libraries/plugins/private_message/: CMakeLists.txt  private_message_plugin.cpp
libraries/plugins/private_message/include/muse/private_message/: private_message_plugin.hpp
libraries/plugins/raw_block/: CMakeLists.txt  raw_block_api.cpp  raw_block_plugin.cpp
libraries/plugins/raw_block/include/muse/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/plugins/snapshot/: CMakeLists.txt  snapshot.cpp
libraries/plugins/snapshot/include/graphene/snapshot/: snapshot.hpp
libraries/plugins/witness/: CMakeLists.txt  witness.cpp
libraries/plugins/witness/include/muse/witness/: witness.hpp
libraries/utilities/: words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  wallet.cpp
programs/: CMakeLists.txt
programs/build_helpers/: check_reflect.py  configure_build.py
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/mused/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  calc_inflation_constants.js  get_dev_key.cpp  inflation_model.cpp  inflation_plot.py  map_muse_network.cpp  newplugin.py  sign_digest.cpp  sign_transaction.cpp
tests/: CMakeLists.txt
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/plugin_tests/: custom_tags.cpp  main.cpp  market_history.cpp
tests/tests/: api_tests.cpp  authority_tests.cpp  basic_tests.cpp  block_tests.cpp  database_tests.cpp  live_tests.cpp  muse_tests.cpp  operation_tests.cpp  operation_time_tests.cpp  reward_tests.cpp  serialization_tests.cpp
(+4 files in other folders)
